--- a/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18/FormMain.resx
+++ b/Tyuiu.MkhitaryanSG.Sprint6.Task7.V18/FormMain.resx
@@ -117,4 +117,144 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="buttonHelp_MSG.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAibSURBVFhHnVYHVJRXFp4c15w1e9ZIGSCu7rpqRI0r
+        wmpwrStgiRRjoszAArHrqsHGYkMIIpEqKE2kikNHHJTYkEXKDG2GmaHD0CyACkhREbF8e+4PM8KgG07u
+        Od/533/fvfe7r933WKxRivpar/EanLiDatwk2eecFIy3TFaC/idwU6BulSTT5MYf1FjrNV7V/7fKJ5rr
+        Q6apc5PKtGyv4Fs/KRwuP8R5UR8iZa8RVtKPUNFLBBf1wju7G7ti6rH65yJo2fGhaZ1cxl4fMo1iqAYd
+        rYzR4CaGErF9fBMSaoC0RiDzESDsAgq6gPxOQPgUyOsA7j6h/reIkL5kkrEKqYS27RWwrZJCKZZq8F+T
+        sWqc5JYlTgJESF7j5kOg6BkQUNQJm6hq6J8QYNKPmZhsP4BJ9pmY5yyAdXgVfHM7cLsFiJD2wjGtBfMc
+        sqBpfbmFYqqSfEzGfm6Z1LwtSo6kWkDwFIgpfwGDnwSYeigLuo7ZmHU0B18dy8WcQVB79tEc6B7OxjSH
+        LBi4CBFY1IXLda/hfOMxvvESQ8MquXk0SYxV4yS1Kshp1HuS6zHdIQtfHc2BnlMe5p0QQN/5w6A+sqGk
+        ZjjexbZYOa42vcPx9Fas9CgG2zql9f8lMUbDkhe+5EQe4mveMeRbebWYfSSHmfK/u+Rj/k/5zNfAOR/6
+        zsJhIN1QG9LRzNhGVYPf8BYHUh5gzv47YHPjwj+0Jz6ZYOQ0izZcqLgPuU+BfalN+NvxXMx3zYehWwGD
+        BScLMM9FiFnH8zD9SC6mOuYwoPasY3nQcxZiwVB713zonRBgR1wdYspewiaiFtp2V6Bu7DRL9XR8qs5J
+        qNx9qQHp9wBeZS/mOuXB8GQ+FrkXMljoNkBu4i2CuKkbqiJq6saGICn0XIQMucKP2rQ8/sJOuGe2YYVb
+        IZ2MSuJUsn8203Qi24aPi2VvUNgFGHmL8I9ThVjqUYxlHsXM19CtEJwQmSrvCLEMluFrt/e+BErEyEeM
+        hKp+2ETUQNuOjz/MNJ2o4B+jvv6Ck5mXGMm1b3BB0g3DkwVY7lGMFV4iBss9RZh/shCNbb1KourW59gU
+        WY7NkRUoqO9S6t+8BQxcCxif9/4DSZzOasPB1PvQc/gv2N+HOSn2wjg1y7jKvfGNuNkM2Kc0YdnpIhh7
+        i2HiMwAjLxEzKoX0v3mHxaeLYHiKUIiZxwW439Gn7Nd3LWCIFf6Ef3oWM6fCO6cTi1yEYFsl0DKMowTU
+        qI575XQxZ948QAoTnxKs9pMoseqMBMu9xDiYWIuwnGa4Xm3AUk8xjH1KsMxThEUeInS/fK1MYMGpIpj4
+        Do9B/2YBMlws64OJlxhaNldA3JQAmy4TP8FzCDvBTNcaPwnWnpUOA+koiJFPCfNd5Sdh2it9S9DW80pJ
+        3tjeiyWeYqzxU/H3l8LYR4zYin4Ye4rBHkiATQloUQKed7uZmm7sK4JpgBTmgbIRMBuEaYAMq/0lWO0v
+        Rfvz9+Qk22KqsMpfwtgN82V8SsArf4Xl7sWKGdBiEpjAScHPmZ3IbQczXRZBpfg2uOyjMA8sxQpfCTpf
+        vFESP+npx/ZL1VjlL4NF4EifdUFlWHtOipiyV1jkVqiSADcFrhkdyG4DTM9K8V1wGTacL/8gvj9fDovA
+        Ujim1ivJH/f0wzSwFGYBpfgueKQP4xdSjnWBMlws7YPhT8LhCahbXcaRq6248wiwiarChtBycMIqPgjL
+        sAqsCy4DX9qmTMA1vQnmQaXYeOHjftRnE1mNUNFz6B/LZa5qRQJsdUteLfd8JRKq+3Hs+kNYXqiAdUTV
+        B2EVQQlWwDvjgTKBA8l12HihcoTtUHDDKnEg9R6cfmmF7v5MaFvF1So2oZramtO+S10EOJPXhXBJDzjh
+        lcy9bxs9EjbR1eBGVME8pBxG/qUMLELKGZ2q7VAf68hKeGR1wPJ8BabsugmNbzx9Fcdw3Fi2rgGVRwd+
+        C64/ALbFyRnHTTE1I/DDxRpwIqpwrbRDOQPUJh31qdoT7C5WY3usHEGFzzCPpv8HPj5l6xooChGVwz9p
+        WsbWr/Upgb+gC9FlvbCLrsHmS7XYypMPw+YYOTaGVyvJFUI66lO133KJfGrhk9uJzdG1+Oue29Cxiqsn
+        zqHX8oRx043NtG352BQlR1xVH9wzHzPvgR1xcuyMr1Nie5wc1lE1qvyMjvqG2u4YtHe60QL3O+2Yui8T
+        OnZ8fPalsRlxKshJ6Gr8i7rFOf7sfRnYGduI1Po3cM14hJ1xcvw7oR67EwdA7S08OW5VdirJqU26YXaJ
+        9diVUIejv7QgsICmPg8Tt14De10gn7iGXceDj4M/slisuZpWie1LXITYEduAZPlr5gbbnVSPPcmN2Jsy
+        gN1JjdgeX49NvDoG1CbdjykDGLBrgMutxwz51y5CTN55Azo2Se3EMcg14rlO60HncqEmJ75toVMerMOr
+        ESF+gXDJCzik3YN9SiPsLxOaBr70z+iasE+B1EY4XL2PM4IunLrTjrmHczFpxw3oWCe2UexBjhFPMoXQ
+        g/ELFou1iM1N6Jix5xZWepfg8NVmpoYHF/XAPfMJjqQ/wAF+E4ODhLQmRud65zFzlIMKe2AbWYPJezLw
+        xZZr0PlXYgfFHIz90UepQhRJLNQ0P5tOm0b/aDZWekuwNaYObhlPECl9wdR0KqvRsj5ESV8iuPgZHNOa
+        se6cDLqHsgZGbZcGtsW59MGRj4pcIWRIUzX391MWW7O5vEZt2zR8ufc25hzKgv7xPOgdy8Ocw9mY+Z+7
+        mHEoC9P3Z+LPu29h0vbrDLG2Fa9x3JTF1oNrTrFGTa4QWifaLFNYLNaC342faKZu4hyqxeE1UB0fCh1b
+        PnO8tLm8BrIhW/IZ9KUYH13zXxPaqXRc6MxS4aDnNE3nChaLZawC0lEf2ZAt+ZDviN3+W4VGQaWT6jdd
+        IjStQ0E66iObUY/4fzWBJDh6tpWuAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="toolTipButton.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>206, 17</value>
+  </metadata>
+  <data name="buttonSaveFile_MSG.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAATiSURBVFhHrZdbbBRVGMdPAkRLpSC2FS+Pxjcf9E1f
+        VIiJJr75oI/Gd4OJQIFSoJVYDanRNBI1MdGASi+U3e1eIDQi5SKUlqLF7qW23d3u7uzuTPe+08vu8jff
+        t7PYjnuZpX7JLzM75z/n/ObsXAUAIYTYvKvTZm06akdDuw0N7da6eazDhp0dwybqizo0XJrANhp8ozUy
+        I6OxbWhICLFJP07F0gRa6MipzE4JFqeEYVe4JpQzOSXeT3w4yEu7K4qGA0ODhiU0gVaaRiqrW4LDHYbD
+        E6mNO8x5Ftg7BI+SLvbhjKDhsDUkhNiiH+8/pRe4OBPBpdkoRgxAOcqzwEdDiGZWcCeUWCMxHKwpoRcY
+        +TuKX+dkXDYA5ShfEsgVCpiPq5jQJByuKBrba0iUBB7VBC7Py7jiVTBqAMqRCAvsPcdLkqCZ8CiZ4gHN
+        yNh5zB6tKKEXuOpVcM23iOsGoNzovML7vd8/yecBzQRD69qJSZeoEGKHfmwuvcAN/yJ+X4jhpkEo74tn
+        ed9KRX8vjaEfm0svcGshhrFAHLcNQlna56a/KETrD377Y9wn9W1YYDyY4JOIzuZ6oH3WMh6MM3UL3A0n
+        mT82SKmfugWmIinm3gYp9VO3gFNOY1pO89IorjKU2uoWoOvXrWR4WYsZJYPZWBbeuApfQoV/DT5tG9XW
+        I3wZ1hA4XBSYjVGntZmLZeBPZlnifxXwxumIakODKNllvPvzOMR+E8QBE8S+EuZ/2W/BlkNWNB6xYftR
+        G5o7HXjmxAXPgzujXiCQVLFggFB6CZnVHMTH53EjXMCVYI73r1ZXQ3lMKGAJIcT2sgJSagkhA0Qyy1jJ
+        5yH2ncdkdBXihAuJVBL9Jgv6zFb0W2wMr5ss3EaZKSVHzwYatKWsgJxdQTSzjGi2OjF1FQXcZ4HRwAq2
+        9nigxBLwK2n4FrPwa/C6kuY2ylwPrZYEiueEXiC5nENiOcfLamRW85yn/98+p6K1dxYROYEzAxacHrTi
+        jAavD1i4jTIXvUt44ng5Ae0yPPdXEOenQzWxuCR+FG9qM2PAncVz33oRkhTMBBbhDsTWQduojTJDHhXN
+        5QRKLyQmZwjDLglWft2qjMMTxqhXxuY2M368l8FLP/hw+rYEny+KWe96aBu1UebMdAbNnVUE6KXU6grD
+        5q6OYyaCqz4FWw6a8d2fKbx+NoBXfwnglZ8W8LIO2kZtlPl+Ko2WagI8A5pENezaDJBA72QKbw8G8dZA
+        AG/0BbBHY/dZYoG3URtlTt2tKFB8Laf/1zQd4pmoxrA7jN/mZWw+aEbPWArvmCT03QkDKHA/XIUCkM8B
+        hRz6JiTOfDleQeBhP0weOWRB960k3huOwB9SMBtKYl97Fw50nIA7mMA9rwynNwp/UObM52NJtJYTeKrT
+        luJPsyPGPs3o/t7UYcOOo1Z8OpbGBxcVRJQ4pLiKzu4edH32BQIxFXPhOOalGMJyjDPdY+myAvTC+KIQ
+        YrcQYk8dvPlklwMnx1W0XUvh/oqKfD6Hr3u/wjenepHL5aCqKlQ1i8JyljMnJ1Ts6uJb8ToBejCQBG2s
+        h+efPtw/RR3SzYVmsOnYBTzeNYIdXZew7dgFNHbYGWqjDGWf/cSe1gs8bDUJIV4QQrxWZnYqQbNMs118
+        Td+gAH2KkwQ9WPSzUw0anB/H/wDSGe0wOxifnAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="buttonDone_MSG.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAARNSURBVFhHtZfbT1xFHMe/iVdCW5VULX+BL0Ytmtr6
+        UJPSpBdtNTHR+Nb45oOpL7ZJge5uC601Jj5owqU1Ij40qS2l7i60QlsKFGjLRcCyF6Bc98LuwsKyC7uF
+        9Wtm9iyBwx4569Jf8sks5Dfz+5w5cyYzIAkAT28zWS1bTtYyq8DKrAJL2mwqsjKnyFwjxhID6g5FYLMo
+        nmk0DPiZfby6GsBT6jqaoQi8LJ5cxDWbh3/YPDTbvesi8mpsHtkPX12Wba3dx6xj1Zd1SygCr4hpFGFx
+        eFjn8LLOObk+Dq/MlwJHq+kMzCXGsE0y64TFDeAZdb01oRa4MTDJ+iEfG3Qg8kS+FPi6mr5wjF3umRUS
+        Zte6EmqBhkEfbz3y87YORJ7ITwosxuMcDs6zU5Gos/uYXbCORFLgeUXg9rCfd0YCbNKByBMiUuDoFdkK
+        CTETzkA48UADfuYYan2aEmqB5pEAW0aneFcHIq9pOCD7HbnULdeBmAmJ+K0sTPGJAnhRXVuGWqB1bIpt
+        49Ns14nIHw1GZF+tEK9X1FDXlqEWuDc+zfsTQT7QicgVfdrHEkLi9/LfY9NyTDG2boEO14xcRGI1p4Po
+        s5IOV1CStsBf3llJT4Ykx0lboG8yJPk7Q5LjpC1g88+x3z8n20xIjpG2gPh+HYGwbDMhOYZ+gRMJgaHp
+        8AYRkbtiQkDuA/oERoKRjBkNznNidok+ZXvILqrXLzAxO8/xDHGFYpyOktsLwLKGz7jF2K1fwBNaoFsX
+        UXrnYvSGH3MyvLgKf4ScXyJ3GsFTF8G8M/v0C/gjMfrCUfoi2oicqYU4Q4/J+Ti5ECejK4glZp67TKBt
+        9BsaL4H5p5D6pKQWmI0ucia6KFstQrG4LFR45SDzCsG3VbxTBO4wgO8awIfjRrY4Pqfhd3BvcQoJ9Wd4
+        5aGLV/vd/8k1m4/XBxe54yQ4GviJvZ4D7PUcYq/nsMJHkh73IdrcP7K0EWwdPELD1RQSSYHkgaTG5qbZ
+        7qFFHrdSU+v08+bwP9xpAG3e0yxtBsuawXIV4n9lLWD5XbCiFWwb+YImM7jvDMzLp2e1gDiUWuxeWh3a
+        1DkDvDVM7jKAHa4vWdoOlrWD5WruJahQ2l87n2Pd4Ovc/x1E0c0pBeQMKBJaWB2JGXjPADZNHGZFN3he
+        g4rOBOe7wF96QdN1cE8hGgHkqAQSx3Lxjmvke/ZoYrb7WP9oSQrUu99ilROS31ZQ5QAr7eDPfeCFPrCy
+        HzT+Ce4+jjsA3lgzA//nYnLh5qc8cBb88NxaDn4L5p8GqwbBygHQ1LBcPA/A1jVrINdkDcmrWaGeq5mV
+        m4puMMfUzFeLHzC3pIu5Jd3LbCvp4dbiIX5wDrzoAo2N4O5jq4qv+QrEgXE7gD0A8jeI/R9/D55tA99f
+        /eQp9wFxZBYSYrvcKF775AdwbwFaNYuvEHgS8ZKy2N4Ud8+UxUU8QYFnAbygrHbNK/u/zGQO/wM2+B8A
+        AAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="buttonOpenFile_MSG.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAABl0RVh0U29m
+        dHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAVgSURBVFhHxZdpbFRVGIYPLgGJ4EKYxBjRRBNNxBiX
+        CsouEg0xoOhfZAtIoXuHFkoBAYUE6kIpoKg/jNqAlrILUkqIFhEKne6dmc4wLdB9GTot7Z07M33MOR2n
+        7dDpAkTf5Mnce86Z77z3u985914BiP8Tqfsup804lp82BVPqJEypb/TBJGT/5bQZR+V49a+7qFEyON5y
+        0Mqgw3wrmln15++cLC2PCg5wpxorr1BO7jbNRzMtRDMtCuIjaD7NpZRXydvxeh8Z6h9/9o6Fyp5BGWgv
+        QitYgla4HK0ovJvCcLSCZfhq9kGHFbQh4raA74oyESp7XQZumtCKPkYrjkArjgxiJVrRcrTCZUNkKe7C
+        xdBRoupIZjt4cim/gQu4i8Nxl0ThLonuA9kuifTTda73SyR6STjcPI8pVdWPIXhyKYPspDUHd2kE7rIY
+        3GWxA6Jb4vBY4/HajP0Qj88WA63ZmHaqW9CfgbPo5ih0cxy6Ob5fPFYjPnsC9l/fJzdlIrkpr/XNdkkY
+        l1LCyPtqInk7ei3pQFF2GXBlo1tj0a1G9PJVeMoTbsWWgNeWiM+xhisZ87Cnzwa3FTpKob0kNB09KQav
+        pVdRGkypU6DlJHq5EY8tEa8jCV9FEr5KydpedF5N5krGh9j3zcVTsgJ34VK0/CVo+YsHwUI85RvwNP3N
+        2a0TLgohxvQwcByvPZHOCjnBPC5un+BPYTATse+fi9ccg14ajbs40k8E+gC4C5fTWfMDdRd3krZi/Foh
+        xMM9DBxWV+w8vxzrT29D21/g+hNcOT04B67zeOTkshhLu9BLY/GZY8ASDZaovjFH0Vm2ElqyKT+wjJee
+        eehFIcQIZSBPGriRCdfXc+XABzTkxNPpPI1ujvAXZnQXFkkMuiUe3WJUeCxGsMXhNscPiMexFZpOkJs6
+        o04I8bgQ4p5uA65foHoj+bunoTn2qFTp1jhVkHp5QhCJAby2BKiM47ltxxAJZxDGLITxVG9WybYsnk05
+        Te25TfwY90KKEOLRHstwKrTup70sgZJv34TmQ3iubsdjX43HntQvnY41cD0eYTzDQMoodfLuphTeC3tk
+        shBiZG8DN9OpzlpAVVY4OA/irViH15GM1yF/Q0NlMlSvQsRlqUmOmGs46uewuUa1iYgMmtv1gAkReyhT
+        CDG828DOadCeTsn3s+iwfQF13+Gt3IC3cuOAcO0TqEtCxJ5SE2TZ6sm2d5Flq+syEJNJhbOd2lZNnZ+w
+        NjI66Ujg3cKQnzadzsbdFOyeDjfS6az+Et+1zfiufTogVG2GhnUBA39UNpJztUkhj5WB2IOU1ruUCac/
+        Ew+uO969EeXvmoGrKJmKIwvA+TO+6i34qrYOCmq2QNNGROzvKvDF683kVjkVF641q7bZ35xDxGYiojPV
+        7ZAamawMqKejoWDPTBxH5+Mq2gTOvVC/Deq3D46GbdDyWcBAYW2Loqi2hfzqG6qtLz2w9ljg4WQo/Pot
+        VB149kHbXmjdNXja0sD9eaAIrY1tASyNbZQ1tGJWtClkm9SIngZMe2a5pAlZC3mpU4dEQeoUHGmvqD1A
+        St5nh7Nd/f57HKC5q00ZSOo2IPfjl1fOeTpyyTtPRQyVRbPGrZgTNmaJWH1WBa5t06hpDY3sDzZwv39X
+        ekII8eRtME4IMV6syVaBnR0emtr1kMj+YANSw4QQ9/rNDBW5lh8blnRSBe7w+mjTvSGR/VLDgwzcqQzD
+        1x5XgQernqvgbsgwev1vwXP0Kzn+bhoYa0hMz5FB5ZXJ9IZC9stxcnyo1/TbkdxSnxdCTBNCzBwEcpwc
+        3+eHyu1IFqIMJq9IpnUg5Dg5vs9Ptf9U/wAV4Qo0/hOsyAAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="textBoxUsl.Text" xml:space="preserve">
+    <value>Дан файл InPutFileTask7V18.csv в котором хранится матрица целочисленных значений. Загрузить файл через openFileDialog в объект dataGridViewIn. Изменить в девятом столбце значения не равные 11 на 11. Результат вывести в объект dataGridViewOut. Сохранить результат в файл OutPutFileTask7.csv через saveFileDialog.</value>
+  </data>
+  <metadata name="openFileDialogTask.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="saveFileDialogMatrix.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>358, 17</value>
+  </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>25</value>
+  </metadata>
 </root>
